# docainer

./: .gitignore  Makefile  README.md  config.yaml  generator.py  install.sh  main.py  pyproject.toml  utils.py
.github/workflows/: build-and-release.yml
templates/django/: Dockerfile.j2  docker-compose.yml.j2
templates/nextjs/: Dockerfile.j2  docker-compose.yml.j2
templates/reactjs/: Dockerfile.j2  docker-compose.yml.j2
templates/vuejs/: Dockerfile.j2  docker-compose.yml.j2  nginx.conf
